--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,12 +102,18 @@ a {
     color: #ffffff;
 }
 
-.benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
+/* .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
 .benefit-lead img, .benefit-brand img, .benefit-cost img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px; */
+}
+.benefits img{
+
     display: block;
     margin: 10px auto;
     max-width: 150px;
