--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,22 +102,15 @@ a {
     color: #ffffff;
 }
 
-/* .benefit-lead h3, .benefit-brand h3, .benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img, .benefit-brand img, .benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px; */
-}
 .benefits img{
-
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+ .benefits h3{
+    margin-bottom: 10px;
+    text-align: center;
+} 
 
 .search-engine-optimization, .online-reputation-management, .social-media-marketing{
     margin-bottom: 20px;
