--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,7 +87,7 @@ a {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
@@ -100,7 +100,12 @@ a {
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
+} */
+.benefits{
+    margin-bottom: 32px;
+    color: #ffffff;
 }
+
 .benefits img{
     display: block;
     margin: 10px auto;
